src/objects/Sample_Plot__c.object
<CustomObject>
    <fields>
        <fullName>CBL_Farm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CBL_Farm</label>
        <referenceTo>CBL_Farm__c</referenceTo>
        <relationshipLabel>Sample Plots</relationshipLabel>
        <relationshipName>Sample_Plots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crop_Age_Monts__c</fullName>
        <label>Crop Age Monts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Farm_Code__c</fullName>
        <label>Farm Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Name__c</fullName>
        <label>Farm Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fertilizer_Name__c</fullName>
        <label>Fertilizer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internodes_flower_tree_sprigs_1__c</fullName>
        <label>Internodes flower / tree sprigs 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internodes_flower_tree_sprigs_2__c</fullName>
        <label>Internodes flower / tree sprigs 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internodes_flower_tree_sprigs_3__c</fullName>
        <label>Internodes flower / tree sprigs 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_fruits_per_tree_branch_1__c</fullName>
        <label>Number of fruits per tree branch 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_fruits_per_tree_branch_2__c</fullName>
        <label>Number of fruits per tree branch 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_fruits_per_tree_branch_3__c</fullName>
        <label>Number of fruits per tree branch 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_internodes_with_fruit_tree_1__c</fullName>
        <label>Number of internodes with fruit tree 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_internodes_with_fruit_tree_2__c</fullName>
        <label>Number of internodes with fruit tree 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_internodes_with_fruit_tree_3__c</fullName>
        <label>Number of internodes with fruit tree 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_leaves_per_tree_branch_1__c</fullName>
        <label>Number of leaves per tree branch 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_leaves_per_tree_branch_2__c</fullName>
        <label>Number of leaves per tree branch 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_leaves_per_tree_branch_3__c</fullName>
        <label>Number of leaves per tree branch 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_young_leaves_of_the_tree_1__c</fullName>
        <label>Number of young leaves of the tree 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_young_leaves_of_the_tree_2__c</fullName>
        <label>Number of young leaves of the tree 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_young_leaves_of_the_tree_3__c</fullName>
        <label>Number of young leaves of the tree 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plot_Area__c</fullName>
        <label>Plot Area</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plot_Code__c</fullName>
        <label>Plot Code</label>
        <picklist>
            <picklistValues>
                <fullName>ccafisa1 Jhon Jairo Hernandez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa2 Yessica Gutierrez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa3 Juan Gregorio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa4 Diego Alberto Alvarez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa5 Andres Cartagena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa6 William Penagos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa7 Mabel Berrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa8 Duban René Higuita Tamayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa9 Hector Vargas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa10 Ever Hinestroza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa11 Jose Ermes Serna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa12 Maria Emilce Cano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa13 Lorena Sepulveda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa14 Luz Marina Ruiz Correa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa15 Sandra Rincón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa35gf Sebastian Rodriguez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa36gf Monica Perez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ccafisa37gf Veronica Cano</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plot_Type__c</fullName>
        <label>Plot Type</label>
        <picklist>
            <picklistValues>
                <fullName>Piloto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testigo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Precisagro_fertilizer_application__c</fullName>
        <label>Precisagro fertilizer application</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_tree_1__c</fullName>
        <description>Enter the size of the tree in meters</description>
        <label>Size tree 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_tree_2__c</fullName>
        <label>Size tree 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_tree_3__c</fullName>
        <label>Size tree 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_tree_branches_1__c</fullName>
        <label>Size tree branches 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_tree_branches_2__c</fullName>
        <label>Size tree branches 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size_tree_branches_3__c</fullName>
        <label>Size tree branches 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dose_application__c</fullName>
        <label>dose application</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fertilization_last_date__c</fullName>
        <label>fertilization last date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>observations__c</fullName>
        <label>observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>product_to_evaluate__c</fullName>
        <label>product to evaluate</label>
        <picklist>
            <picklistValues>
                <fullName>Fase Crecimiento (27-20-0-1S-6Ca)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferticrop Café Levante (29-16-3-2Mg-3S-0,02B-0,031Zn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción 17 (17-6-18-2Mg-1S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F17 (17-6-18-7Mg-8,5S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arábigo (21-3-17-3Mg-4S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción 24 (24-3-20-3Mg-4S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción 25 (25-3-19-3Mg-4S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 4 - 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferticrop Café Producción (22-6-17-2Mg-3S-0,031Zn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitroxtend (46-0-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitroxtend + S (40-0-0-6S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitroxtend + Mg (39-0-3-2Mg-3S)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sample Plot</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sample Plot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Plots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>